# Splendor-Algorithm-Analysis

./: .gitignore  CMakeLists.txt
assets/: weights.txt
assets/default/: nobles.csv
assets/default/decks/: 1.csv  2.csv  3.csv
src/: game.cpp  game.h  gameAction.cpp  gameAction.h  gameSetup.cpp  gameSetup.h  gameState.cpp  gameState.h  main.cpp  notes.txt
src/Display/: consoleColors.h  gameOutput.cpp  gameOutput.h
src/Players/: HumanPlayer.cpp  Player.h
src/display/: gameOutput.cpp  gameOutput.h
src/game/: game.cpp  game.h  gameAction.cpp  gameAction.h  gameData.cpp  gameData.h  gameDependencies.h  gameSetup.cpp  gameSetup.h  gameState.cpp  gameState.h
src/players/: HumanPlayer.cpp  Player.h
src/players/agents/: MiniMax.cpp  Monte-Carlo.cpp  OSLA_V1.cpp  OSLA_V2.cpp  RandomPlayer.cpp
src/players/agents/Learning/: RLbasic_V1.cpp
src/players/agents/common/: tree.cpp  tree.h
src/utils/: Math.cpp  Math.h  config.h
